# sys_transformer

./: LSTM_stock_predict.ipynb  README.md  Transformer_stock_predict.ipynb  app.py  pyproject.toml
