[project]
name = "gradio-app"
version = "0.1.0"
description = ""
authors = [
    {name = "chocosuke",email = "best.tsukasa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "gradio (>=5.10.0,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
